# Witness-Encryption

./: .gitignore  Cargo.toml  README.md
decoder/: Cargo.toml
encoder/: Cargo.toml
encoder/src/: all_acc_gen.rs  lib.rs  main.rs  vss_encode.rs
my_lib/: Cargo.toml
my_lib/src/: adp.rs  config.rs  file_io.rs  lib.rs  random_gen.rs  stdio.rs
vss_gen/: Cargo.toml
vss_gen/src/: lib.rs  main.rs
