workspace = { members = [ "decoder", "encoder", "my_lib","vss_gen"] }
[package]
name = "Witness_Encryption"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "encoder"
path = "encoder/src/main.rs"

[[bin]]
name = "decoder"
path = "decoder/src/main.rs"

[[bin]]
name = "vss_gen"
path = "vss_gen/src/main.rs"

[lib]
name = "my_lib"
path = "my_lib/src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "*"
rand = "0.8"
rusymbols = "0.1.0"